--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=database
+      - POSTGRES_DB=datbase
     restart: always
     ports:
       - 5432:5432
@@ -44,6 +44,8 @@ services:
     image: whyjguy/flask
     container_name: flask
     restart: always
+    env_file:
+      - env_file
     environment:
       - APP_NAME=app
     depends_on:
